updated stub files generation with buf
